<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ECE5DD"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/send1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

            <EditText
                android:id="@+id/message_et"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="#fff"
                android:layout_height="wrap_content"
                android:autofillHints="Type message" />
            <Button
                android:id="@+id/send2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"/>

        </LinearLayout>
    </LinearLayout>


</layout>